# ft-wallet

./: README.md  example_client.py  main.py  pyproject.toml
protos/: wallet.proto
src/server/: backup_server.py  http_server.py  primary_server.py
src/services/: failover_service.py  wallet_pb2.py  wallet_pb2_grpc.py  wallet_service.py
