[project]
name = "ft-wallet"
version = "0.1.0"
description = "Fault-tolerant wallet with primary and backup servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.32.5",
]
